--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "gray-matter": "^4.0.3",
     "next": "15.4.1",
     "next-mdx-remote": "^5.0.0",
+    "prismjs": "^1.30.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-syntax-highlighter": "^15.6.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "tailwind-merge": "^3.3.1"
